--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
